Document the interactive shell via a plain Scala REPL (scala-cli/Ammonite)
Drop the bin/spark-connect-shell wrapper in favor of documenting how to open a
plain Scala REPL with the published client as a dependency (scala-cli --dep /
Ammonite import $ivy), including the Arrow --add-opens flags. Keeps sbt
client/console as a dev-only convenience.

Co-authored-by: Isaac